A few typos fixed

--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -1,4 +1,4 @@
-tatami.copyright=Copyright 2012
+tatami.copyright=Copyright 2012t
 tatami.ippon.technologies=Ippon Technologies
 tatami.github.fork=Forker Tatami sur Github
 tatami.github.issues=Signaler un bug
@@ -33,7 +33,7 @@ tatami.login.modal.timeout.message=Vous avez été déconnecté. Vous devez vous
 tatami.login.modal.timeout.close=Fermer
 
 tatami.register.title=Vous n'avez pas (encore) de compte
-tatami.register.text.1=Pour créer votre compte Tatami, merci d'enregistrer votre adresse e-mail.
+tatami.register.text.1=Pour créer votre compte Tatami, merci de renseigner votre adresse e-mail.
 tatami.register.text.2=Un message de confirmation sera envoyé à l'adresse e-mail que vous avez fournie.
 tatami.register.text.3=En fonction du nom de domaine de votre adresse e-mail, vous rejoindrez alors l'espace privé de votre entreprise. Par exemple, les utilisateurs avec une adresse de type email@ippon.fr rejoindront l'espace privé d'Ippon Technologies.
 tatami.register.text.4=Si vous êtes le premier employé de votre société à rejoindre Tatami, un espace privé pour votre société sera automatiquement créé.
@@ -58,7 +58,7 @@ tatami.authentication.google.title=Authentification Google Apps
 tatami.authentication.google.desc.1=Cette fonctionnalité concerne les utilisateurs professionnels de Google Apps, et qui ont le nom de domaine de leur société associé à leur compte Google Apps. Pour plus d'informations sur Google Apps, suivez ce lien :
 tatami.authentication.google.desc.2=Que vous ayez déjà un compte Tatami ou non, vous pouvez vous connecter avec votre compte Google Apps.
 tatami.authentication.google.desc.3=Votre email sera demandé à Google et votre nom de domaine sera utilisé pour vous faire rejoindre l'espace privé correspondant.
-tatami.authentication.google.submit=Connection avec Google Apps
+tatami.authentication.google.submit=Connexion avec Google Apps
 tatami.authentication.cgv=Conditions générales de vente
 tatami.remember.password.time=Se souvenir de moi
 tatami.cg=Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
@@ -102,7 +102,7 @@ tatami.user.picture=Photo
 tatami.user.picture.button=Déposez votre photo dans le cadre pour la mettre à jour
 tatami.user.picture.buttonIE=Sélectionnez une photo pour mettre à jour votre profil.
 tatami.user.picture.buttonIE-ok=Photo mise à jour correctement.
-tatami.user.upload.buttonIE-ok=Sélectionnez des fichiers à ajouter à votre Tatam.
+tatami.user.upload.buttonIE-ok=Sélectionnez des fichiers à ajouter à votre message.
 tatami.user.upload.buttonIE-ko=Une erreur s'est produite, pensez à supprimer des anciens fichiers dans votre compte.
 tatami.user.upload.choose=Choisir un fichier
 tatami.user.email=E-mail
@@ -136,7 +136,7 @@ tatami.menu.password=Mot de passe
 tatami.menu.files=Fichiers
 tatami.menu.directory=Utilisateurs
 tatami.menu.tags=Tags
-tatami.menu.status.of.the.day=Statuts du jour
+tatami.menu.status.of.the.day=Messages du jour
 tatami.menu.company.wall=Mur de l'entreprise
 tatami.menu.preferences=Préférences
 tatami.menu.groups.directory=Annuaire des groupes
@@ -163,10 +163,10 @@ tatami.user.new.password.confirmation.error=La confirmation du nouveau mot de pa
 tatami.user.new.password.confirmation=Confirmation du mot de passe
 
 tatami.preferences.notifications=Notifications
-tatami.preferences.notifications.email.mention=Recevoir un e-mail lorsque l'on vous mentionne
+tatami.preferences.notifications.email.mention=Recevoir un e-mail lorsqu'on vous mentionne
 tatami.preferences.notifications.email.dailyDigest=Recevoir un résumé quotidien de votre actualité
 tatami.preferences.notifications.email.weeklyDigest=Recevoir un résumé hebdomadaire de votre actualité
-tatami.preferences.notifications.rss.timeline=Autoriser la publication d'un flux RSS de votre Actualité
+tatami.preferences.notifications.rss.timeline=Autoriser la publication d'un flux RSS de votre actualité
 tatami.preferences.success=Vos préférences ont été sauvegardées
 
 tatami.user.profile.show=Profil de
@@ -175,17 +175,17 @@ tatami.user.status.show=Voir
 tatami.user.status.details=Détails
 tatami.user.status.reply=Répondre
 tatami.user.status.share=Partager
-tatami.user.status.share.success=Status partagé !
+tatami.user.status.share.success=Message partagé !
 tatami.user.status.favorite=Favori
 tatami.user.status.delete=Supprimer
 tatami.user.status.announce=Annoncer
 tatami.user.status.replyto=En réponse à
 tatami.user.status.shared.by=Partagé par
 tatami.user.status.announced.by=Annoncé par
-tatami.user.shared.you=a partagé votre status
+tatami.user.shared.you=a partagé votre message
 tatami.user.followed.you=vous a suivi
 tatami.user.profile.edit=Editer mon profil
-tatami.user.search.searchInStatus=Statuts contenant
+tatami.user.search.searchInStatus=Messages contenant
 tatami.user.activate=Activer
 tatami.user.desactivate=Désactiver
 tatami.user.desactivate.msg=Cet utilisateur est désactivé
@@ -198,8 +198,8 @@ tatami.timeline.next=Plus
 
 tatami.timeline.shares=Partagé par
 
-tatami.user.status.confirm.announce=Etes-vous certain de vouloir envoyer ce status à tout le monde ?
-tatami.user.status.confirm.delete=Etes-vous certain de vouloir supprimer ce status ?
+tatami.user.status.confirm.announce=Etes-vous certain de vouloir envoyer ce message à tout le monde ?
+tatami.user.status.confirm.delete=Etes-vous certain de vouloir supprimer ce message ?
 
 tatami.group.name=Groupe
 tatami.group.counter=Membres
@@ -210,8 +210,8 @@ tatami.group.add.access=Accès
 tatami.group.add.public=Public
 tatami.group.add.private=Privé
 tatami.group.add.archived=Archivé
-tatami.group.add.public.alert=Attention! Si ce groupe est public, tout le monde y aura accès
-tatami.group.add.success=Groupe créé avec succés
+tatami.group.add.public.alert=Attention ! Si ce groupe est public, tout le monde y aura accès
+tatami.group.add.success=Groupe créé avec succès
 tatami.group.archive=Voulez-vous archiver ce groupe ?
 tatami.group.archive.true=Oui, ce groupe doit être archivé
 tatami.group.archive.false=Non, ce groupe est toujours utilisé
@@ -220,12 +220,12 @@ tatami.group.list=Vos groupes
 tatami.group.edit.link=Gestion
 tatami.group.edit.quit=Quitter
 tatami.group.join.group=Rejoindre
-tatami.group.edit.success=Groupe mis à jour avec succés
+tatami.group.edit.success=Groupe mis à jour avec succès
 tatami.group.edit.details=Modifier les détails du groupe
 tatami.group.edit.list=Liste des membres
-tatami.group.edit.member.add.success=Utilisateur ajouté avec succés
+tatami.group.edit.member.add.success=Utilisateur ajouté avec succès
 tatami.group.edit.member.add.error=L'utilisateur n'a pas pu être ajouté !
-tatami.group.edit.member.remove.success=Utilisateur enlevé avec succés
+tatami.group.edit.member.remove.success=L'utilisateur ne fait plus partie du groupe
 tatami.group.edit.member.add.no.user=Vous devez entrer le nom d'un utilisateur
 tatami.group.edit.member.add.wrong.user=Cet utilisateur n'existe pas
 tatami.group.edit.member.add=Ajouter un membre
@@ -251,7 +251,7 @@ tatami.presentation.row1.9=Versions Française et Anglaise disponibles, de nouve
 
 tatami.presentation.row2.title=Fonctionne partout !
 tatami.presentation.row2.1=Application Web entièrement dynamique (HTML5) : rien à installer, à part un navigateur Web moderne !
-tatami.presentation.row2.2=Fonctionne sur tout support : mobile, tablette, ou PC "classique", l'application s'adapte automatiquement à lécran
+tatami.presentation.row2.2=Fonctionne sur tout support : mobile, tablette, ou PC "classique", l'application s'adapte automatiquement à l'écran
 tatami.presentation.row2.3=Restez connecté à votre entreprise où que vous soyez
 
 tatami.presentation.row3.title=S'installe facilement et s'intègre sans problème dans votre SI
@@ -267,7 +267,7 @@ tatami.presentation.row3.8=Participez au développement et proposez des correcti
 tatami.presentation.row4.title=Disponible également en version hébergée, entièrement gérée par Ippon Technologies
 tatami.presentation.row4.1=Si vous ne voulez pas installer Tatami chez vous, rien de plus simple que d'utiliser directement
 tatami.presentation.row4.2=Mode multi-entreprise sécurisé : chaque entreprise dispose de son propre espace
-tatami.presentation.row4.3=Cryptage SSL fort (256 bits) en standard : tous les transferts de données sont sécurisés
+tatami.presentation.row4.3=Chiffrage SSL fort (256 bits) en standard : tous les transferts de données sont sécurisés
 
 tatami.presentation.row5.title=Une question ?
 tatami.presentation.row5.1=Notre équipe commerciale reste à votre écoute - Téléphonez-nous au 01 46 12 48 48 ou envoyez-nous un e-mail à
@@ -283,7 +283,7 @@ tatami.account.tags.recommended=Recommandés
 tatami.rss.timeline.title=Actualité de {0}
 tatami.rss.timeline.description=Actualité Tatami de {0}
 tatami.preferences.notifications.rss.timeline.link=Lien vers le flux RSS de votre actualité
-tatami.logo=Ippon Technologies Logo
+tatami.logo=Ippon Technologies
 
 tatami.welcome.title=Bienvenue sur Tatami
 tatami.welcome.description=Votre actualité est vide ! Avez-vous besoin d'aide pour apprendre à utiliser Tatami ? Si oui, cliquez sur le bouton pour lancer la présentation.
@@ -304,29 +304,29 @@ tatami.help.home.timeline.content=Cette zone représente votre actualité. Elle 
   <li>dans lesquels vous êtes cité, ou qui vous ont été envoyés en privé,</li>\
   <li>postés par les utilisateurs que vous suivez,</li>\
   <li>postés dans un groupe dont vous faites partie.</li></ul> \
-  <p>Ne vous inquiétez pas pas si cette liste est vide, elle se remplira dès que vous aurez commencé à suivre d'autres utilisateurs !</p>\
+  <p>Ne vous inquiétez pas si cette liste est vide, elle se remplira dès que vous aurez commencé à suivre d'autres utilisateurs !</p>\
   <p>Pour chacun des messages de cette liste, vous pouvez répondre et le marquer comme favori, afin de le retouver facilement plus tard.</p>\
-  <p>Si un message a déjà eu des réponses, vous pouvez les afficher toutes en cliquant sur \'<i class=\'icon-search\'></i>Détails' : cela permet de suivre facilement des conversations sur tatami.</p>
+  <p>Si un message a déjà eu des réponses, vous pouvez toutes les afficher en cliquant sur \'<i class=\'icon-search\'></i>Détails' : cela permet de suivre facilement des conversations sur Tatami.</p>
 
 tatami.help.home.updatestatus.title=<b>Poster des messages</b>
 tatami.help.home.updatestatus.content=C'est ici que vous rédigez les messages que vous voulez poster \
   <ul><li>tous les messages sont publics par défaut. Ils seront envoyés à tous les utilisateurs qui vous suivent,</li> \
-  <li>quand vous rédigez un messages, il est conseillé d'utiliser des <i>#hashtags</i> : il s'agit simplement d'ajouter le caractère \'#\' au début des mots importants qui pourront être utilisés pour retrouver votre message, </li> \
-  <li>lorsque vous mentionnez un utilisateur, ou que vous répondez à quelqu'un, il faut faire précéder son nom du symbol \'@\' : il sera ainsi notifié que quelqu'un lui parle.</li> \
+  <li>quand vous rédigez un message, il est conseillé d'utiliser des <i>#hashtags</i> : il s'agit simplement d'ajouter le caractère \'#\' au début des mots importants qui pourront être utilisés pour retrouver votre message, </li> \
+  <li>lorsque vous mentionnez un utilisateur ou que vous répondez à quelqu'un, il faut faire précéder son nom du symbol \'@\' : il sera ainsi notifié que quelqu'un lui parle.</li> \
   </ul>
 
 tatami.help.home.groups.title=<b>Groupes</b>
-tatami.help.home.groups.content=Voici la liste des groupes dont vous faite partie. \
-  <p>Vous pouvez trouver la liste des groupes publiques auxquels vous inscrire dans la page <i>\'Compte/Groupe\'</i> (dans le menu en haut à droite).</p>\
+tatami.help.home.groups.content=Voici la liste des groupes dont vous faites partie. \
+  <p>Vous pouvez trouver la liste des groupes publics auxquels vous inscrire dans la page <i>\'Compte/Groupe\'</i> (dans le menu en haut à droite).</p>\
   <p>Il existe aussi des groupes privés : vous ne pouvez pas vous y inscrire vous même, seul le propriétaire d'un groupe privé peut vous déclarer comme membre de ce groupe.</p>\
 
 tatami.help.home.follow-suggest.title=<b>Utilisateurs suggérés</b>
 tatami.help.home.follow-suggest.content=<p>Cette liste vous propose des utilisateurs qui partagent les mêmes centres d'intérêts que vous et que vous pourriez éventuellement suivre.</p>\
-  <p>Si vous êtes un nouvel utilisateur, cette liste est probablement vide : tatami a besoin d'un peu de temps pour apprendre qui vous êtes et vous proposer des utilisateurs similaires.</p>\
-  <p>Et surtout, n'oubliez pas de poster des messages et d'utiliser des #hashtags, cela permet à tatami de vous proposer plus rapidement des utilisateurs à suivre !</p>
+  <p>Si vous êtes un nouvel utilisateur, cette liste est probablement vide : Tatami a besoin d'un peu de temps pour apprendre qui vous êtes et vous proposer des utilisateurs similaires.</p>\
+  <p>Et surtout, n'oubliez pas de poster des messages et d'utiliser des #hashtags, cela permet à Tatami de vous proposer plus rapidement des utilisateurs à suivre !</p>
 
 tatami.help.home.profileTrends.title=<b>Tendances</b>
-tatami.help.home.profileTrends.content=<p>Cette liste représente les #hashtag les plus utilisés ces derniers jours sur tatami. Utilisez-la pour découvrir les dernières tendances et les sujets que vous ne connaissez pas !</p>
+tatami.help.home.profileTrends.content=<p>Cette liste représente les #hashtag les plus utilisés ces derniers jours sur Tatami. Utilisez-la pour découvrir les dernières tendances et les sujets que vous ne connaissez pas !</p>
 tatami.tatam.publish=Publier
 tatami.status.options=Options
 tatami.tatam.mandatory=Commentaire obligatoire
