Page to handle 403 http error code

--- a/web/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/web/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -22,6 +22,7 @@ tatami.logout=Logout
 tatami.login=E-mail
 tatami.username=User name
 tatami.password=Password
+tatami.403=Access forbidden.
 tatami.404=Page not found.
 tatami.500=An error has occurred.
 tatami.file.not.found=The requested file does not exist. It was probably deleted by its owner.
