--- a/web/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/web/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -22,6 +22,7 @@ tatami.logout=Déconnexion
 tatami.login=E-mail
 tatami.username=Nom d'utilisateur
 tatami.password=Mot de Passe
+tatami.403=Accès non autorisé.
 tatami.404=Page non trouvée.
 tatami.500=Une erreur s'est produite.
 tatami.file.not.found=Le fichier demandé n'existe pas. Il a probablement été supprimé par son propriétaire.
