added the Tatami login User Interface

--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -4,6 +4,8 @@
         "browsehappy": "You are using an <strong>outdated</strong> browser. Please <a href=\"http://browsehappy.com/?locale=en\">upgrade your browser</a> to improve your experience.",
         "menu": {
             "home": "Home",
+            "timeline": "Timeline",
+            "about": "About",
             "jhipster-needle-menu-add-element": "JHipster will add additional menu entries here (do not translate!)",
             "entities": {
                 "main": "Entities",
@@ -31,6 +33,16 @@
                 "database": "Database"
             },
             "language": "Language"
+        },
+        "about": {
+            "presentation": "Presentation",
+            "tos": "Terms of Service",
+            "license": "Souce Code License",
+            "submitBug": "Submit a Bug Report",
+            "fork": "Fork Tatami on Github",
+            "website": "Ippon Technologies Website",
+            "blog": "Ippon Technologies Blog",
+            "twitter": "Follow @ippoontech on Twitter"
         },
         "form": {
             "username": "Username",
