--- a/src/main/webapp/i18n/en/login.json
+++ b/src/main/webapp/i18n/en/login.json
@@ -1,11 +1,31 @@
 {
     "login": {
-        "title": "Sign in",
+        "mainTitle": "Welcome to Tatami",
+        "subtitle": "An open source enterprise social network",
+        "moreInfo": "More Info",
+        "title": "Login",
+        "google": {
+            "title": "Google Apps Login",
+            "login": "Login usin Google Apps",
+            "tos": "Terms of Service",
+            "line1": "This feature is for Google Apps for Work users, who have their work domain name managed by Google Apps.",
+            "line2": "Whether or not you already have a Tatami account, you can sign in with your Google Apps account.",
+            "line3": "Your email will be provided by Google and your email's domain name will be used to allow you to join your company's private space.",
+            "link": "For more information on Google Apps for Work click here."
+        },
         "form": {
+            "email": "Email",
             "password": "Password",
             "password.placeholder": "Your password",
             "rememberme": "Remember me",
             "button": "Sign in"
+
+        },
+        "register": {
+            "title": "Register",
+            "line1": "A confirmation email will be sent to the address you provide.",
+            "line2": "Your email's domain will determine the company space you join. For example, users with an email@ippon.fr address will join Ippon's private space.",
+            "line3": "If you are the first employee of your company to join Tatami, your company's private space will be automatically created."
         },
         "messages": {
             "error": {
@@ -13,7 +33,8 @@
             }
         },
         "password" : {
-            "forgot": "Did you forget your password?"
+            "forgot": "Forget your password?",
+            "reset": "Reset Password"
         }
     }
 }
