bootstrap grid fix

--- a/src/main/webapp/i18n/en/about.json
+++ b/src/main/webapp/i18n/en/about.json
@@ -7,7 +7,7 @@
             "devices": "Devices",
             "openSource": "Open Source",
             "row1": {
-                "title": "A private, enterprise social network",
+                "title": ".         A private, enterprise social network",
                 "line1": "Update your status to inform your co-workers",
                 "line2": "Subscribe to other employees' time lines",
                 "line3": "Share important information to your followers",
