Added translate value for account.form.save

--- a/src/main/webapp/i18n/en/account.json
+++ b/src/main/webapp/i18n/en/account.json
@@ -15,6 +15,9 @@
       "save": "Your profile has been saved"
     },
 
+    "form": {
+        "save": "Save"
+    },
 
     "preferences": {
       "title": "Preferences",
