TOS buttons work now, minor appearence update

--- a/src/main/webapp/i18n/en/login.json
+++ b/src/main/webapp/i18n/en/login.json
@@ -15,6 +15,7 @@
         },
         "form": {
             "email": "Email",
+            "username": "Username",
             "password": "Password",
             "password.placeholder": "Your password",
             "rememberme": "Remember me",
