Added force logout to the password page. Added new translation field for logout warning on password page.

--- a/src/main/webapp/i18n/en/account.json
+++ b/src/main/webapp/i18n/en/account.json
@@ -44,7 +44,9 @@
       "old": "Old Password",
       "new": "New Password",
       "confirm": "Confirm New Password",
-      "save": "Your password has been changed"
+      "save": "Your password has been changed",
+      "warning": "After saving your password you will be logged out and required to log back in."
+
     },
 
 
