--- a/src/main/webapp/i18n/en/account.json
+++ b/src/main/webapp/i18n/en/account.json
@@ -44,9 +44,7 @@
       "old": "Old Password",
       "new": "New Password",
       "confirm": "Confirm New Password",
-      "save": "Your password has been changed",
-      "warning": "After saving your password you will be logged out and required to log back in."
-
+      "save": "Your password has been changed"
     },
 
 
