Allowing the content of a status to display on the timeline page.

--- a/src/main/webapp/i18n/en/home.json
+++ b/src/main/webapp/i18n/en/home.json
@@ -4,6 +4,11 @@
         "timeline": "Timeline",
         "mentions": "Mentions",
         "favorites": "Favorites",
+        "status": {
+            "reply": "Reply",
+            "share": "Share",
+            "favorite": "Favorite"
+        },
             "form": {
                 "cancel": "Cancel",
                 "presentation": "Launch presentation"
