Added tag functionality. Resolved issue with timeline headers.

--- a/src/main/webapp/i18n/en/home.json
+++ b/src/main/webapp/i18n/en/home.json
@@ -8,6 +8,12 @@
                 "cancel": "Cancel",
                 "presentation": "Launch presentation"
             },
+            "tag": {
+                "title": "Tag",
+                "follow": "Follow",
+                "following": "Following",
+                "unfollow": "Unfollow"
+            },
             "welcome": {
                 "title": "Welcome to Tatami",
                 "message": "Your timeline is empty! Do you need help to learn how to use Tatami? Please click on the button below to launch a presentation.",
