Updated Navbar to hide functionality in certain states. Added logout button on navbar when in account state. Added translation field for logout button. Replaced profile.username with profile.login in homeSidebar.html

--- a/src/main/webapp/i18n/en/account.json
+++ b/src/main/webapp/i18n/en/account.json
@@ -1,6 +1,8 @@
 {
   "account": {
 
+    "logout": "Logout",
+
     "profile": {
       "title": "Profile",
       "dropPhoto": "Drop your photo here to update it",
