Added translation fields for timeline and groups page. Fixed transition from site to group state via navbar

--- a/src/main/webapp/i18n/en/account.json
+++ b/src/main/webapp/i18n/en/account.json
@@ -101,7 +101,8 @@
       "archived": "Archived",
       "add": "Add",
       "remove": "Remove",
-      "save": "Your group has been created"
+      "save": "Your group has been created",
+      "cancel": "Cancel"
     },
 
 
