Updated more.json translations

--- a/mobile/www/i18n/en/more.json
+++ b/mobile/www/i18n/en/more.json
@@ -4,7 +4,7 @@
         "company": "Company Timeline",
         "logout": "Logout",
         "language": {
-            "change": "Change Language",
+            "change": "Language",
             "english": "English",
             "french": "French"
         }
