Added french translation for logout

--- a/mobile/www/i18n/fr/more.json
+++ b/mobile/www/i18n/fr/more.json
@@ -2,7 +2,7 @@
     "more": {
         "title": "More Options",
         "company": "Company Timeline",
-        "logout": "Logout",
+        "logout": "Déconnexion",
         "language": {
             "change": "Language",
             "english": "English",
