Added Files page functionality

--- a/src/main/webapp/i18n/en/account.json
+++ b/src/main/webapp/i18n/en/account.json
@@ -19,7 +19,8 @@
 
     "form": {
         "save": "Save",
-        "fail": "Fail"
+        "fail": "Fail",
+        "deleted": "Your file has been deleted"
     },
 
     "preferences": {
