--- a/mobile/www/i18n/fr/home.json
+++ b/mobile/www/i18n/fr/home.json
@@ -2,7 +2,7 @@
     "tab": {
         "timeline": "Timeline",
         "mentions": "Mentions",
-        "favorites": "Favorites",
-        "more": "More"
+        "favorites": "Favoris",
+        "more": "Plus"
     }
 }
