--- a/mobile/www/i18n/fr/post.json
+++ b/mobile/www/i18n/fr/post.json
@@ -1,6 +1,6 @@
 {
     "post": {
         "title": "Post",
-        "message": "Post Here..."
+        "message": "Ecrivez votre message ici..."
     }
 }
