--- a/mobile/www/i18n/fr/user.json
+++ b/mobile/www/i18n/fr/user.json
@@ -1,9 +1,9 @@
 {
     "user": {
         "profile": {
-            "title": "Profile"
+            "title": "Profil"
         },
-        "follow": "Follow",
-        "unfollow": "Unfollow"
+        "follow": "S'abonner",
+        "unfollow": "Se désabonner"
     }
 }
