Added validation on domains for user management console. Fixed an issue where users couldn't be created

--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -311,6 +311,8 @@
         "Size": "Field {{fieldName}} does not meet min/max size requirements!",
         "userexists": "Login name already used!",
         "emailexists": "E-mail is already in use!",
+        "domainbad": "The chosen domain does not match the current user.",
+        "deleteself": "You cannot delete your own account",
         "idexists": "A new {{entityName}} cannot already have an ID"
     },
     "footer": "This is your footer"
