--- a/mobile/www/i18n/fr/more.json
+++ b/mobile/www/i18n/fr/more.json
@@ -5,7 +5,7 @@
         "logout": "Déconnexion",
         "language": {
             "change": "Langue",
-            "english": "English",
+            "english": "Anglais",
             "french": "Français"
         }
     }
