--- a/mobile/www/i18n/fr/status.json
+++ b/mobile/www/i18n/fr/status.json
@@ -1,7 +1,7 @@
 {
     "status": {
         "share": {
-            "title": "partagé",
+            "title": "a partagé",
             "mention": "Votre status a été partagé"
         },
         "reply": "En réponse à ",
